new graphs and new speaker img size

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Moonarch</title>
 	<!-- Add Fav Icon -->
 	<!-- Main purple color: #431984 --->
-	<link rel="stylesheet" href="./css/beta.css">
+	<link rel="stylesheet" href="./css/styles.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Aqulia Capital is building infrastructure for early stage investing"> <!-- Google Search Description -->
@@ -49,7 +49,7 @@
         </div>
         <div class="flexRow spaceBetween column800">
           <div class="flexColumn numCol">
-            <div class="num">20<span class="num" style="font-size: 80px">+</span></div>
+            <div class="num">20</div>
             <div class="numText">accelerators</div>
           </div>
           <div class="flexColumn numCol">
@@ -163,43 +163,43 @@
       <div class="emptySpace"></div>
       <div class=""> 
         <div class="whiteTitle" style="color: #721cff">
-          Our Events
+          Our Private Events
         </div>
         <div class="whiteText">Meet exited-unicorn founders, MPs at prominent funds who will speak on how to foster an investment thesis, diligence strategies & much more!</div>
         <div class="flexRow flexCenter flexWrap">
           <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/alex.jpeg" /></div>
-            <div class="blackTitle">Alex Normon</div>
+            <div class="blackTitle speakerTitle">Alex Normon</div>
             <div class="greyText">N49P Partner, AngelList Canada</div>
             <a href="https://www.linkedin.com/in/alexanderlnorman/" target="_blank" class="callButton shortButton">About</a>
           </div>
           <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/jeff.jpeg" /></div>
-            <div class="blackTitle">Jeff Hoffman</div>
+            <div class="blackTitle speakerTitle">Jeff Hoffman</div>
             <div class="greyText">Investor, Philanthropist</div>
             <a href="https://www.linkedin.com/in/jeffhoff/" target="_blank" class="callButton shortButton">About</a>
           </div>
           <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/andre.jpeg" /></div>
-            <div class="blackTitle">Andre Charoo</div>
+            <div class="blackTitle speakerTitle">Andre Charoo</div>
             <div class="greyText">Maple GP & Inovia Venture Partner</div>
             <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton shortButton">About</a>
           </div>
           <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/geri.jpeg" /></div>
-            <div class="blackTitle">Geri Kirilova</div>
+            <div class="blackTitle speakerTitle">Geri Kirilova</div>
             <div class="greyText">Laconia MP</div>
             <a href="https://www.linkedin.com/in/gerikirilova/" target="_blank" class="callButton shortButton">About</a>
           </div>
           <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/frederik.jpeg" /></div>
-            <div class="blackTitle">Frederik Groce</div>
+            <div class="blackTitle speakerTitle">Frederik Groce</div>
             <div class="greyText">Wellington VC & BLCK VC Co-founder</div>
             <a href="https://www.linkedin.com/in/frederikgroce/" target="_blank" class="callButton shortButton">About</a>
           </div>
           <div class="flexColumn flexCenter speakerBox reveal">
             <div class="speakerImg"><img class="croppedImg" src="./assets/derrick.jpeg" /></div>
-            <div class="blackTitle">Derrick Raphael</div>
+            <div class="blackTitle speakerTitle">Derrick Raphael</div>
             <div class="greyText">CEO, Founder</div>
             <a href="https://www.linkedin.com/in/derrickraphael/" target="_blank" class="callButton shortButton">About</a>
           </div>
@@ -268,7 +268,7 @@
           </div>
           <div class="aroundPartner">
             <div class="flexColumn partnerLogo">
-              <a href="https://cpsse.psu.edu/club/happy-valley-vc" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/pennstate.png" /></a>
+              <a href="https://happyvalley.vc/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/pennstate.png" /></a>
             </div>
           </div>
           <div class="aroundPartner">
