changed startup examples and fixed responsiveness

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
     </div>
 
-    <div class="wrapGrid pageMargins">
+    <div class="wrapGrid flexCenter">
       <div class="emptySpace"></div>
       <div class="whiteTitle" style="color: #721cff">
         Our Startup Funnel
@@ -92,7 +92,7 @@
       </div>
 
       <div class="emptySpace">
-        <img height="100" width="100" class="arrow" src="./assets/arrow1.png" style="transform: translateX(-30px);"  />
+        <img height="100" width="100" class="arrow" src="./assets/arrow1.png" style="transform: translateX(-70px);"  />
       </div>
 
       <div class="flexRow spaceBetween textCol reverseRow">  <!--  class="blackBox animationCard" -->
@@ -138,7 +138,7 @@
       </div>
 
       <div class="emptySpace">
-        <img height="50" width="100" class="arrow" src="./assets/arrow3.png"  />
+        <img height="50" width="100" class="arrow" src="./assets/arrow3.png" style="transform: translateX(70px);"  />
       </div>
 
       <div class="flexRow spaceBetween textCol reverseRow">  <!--  class="blackBox animationCard" -->
@@ -161,7 +161,7 @@
       </div>
 
       <div class="emptySpace"></div>
-      <div class=""> 
+      <div class="infoMargin"> 
         <div class="whiteTitle" style="color: #721cff">
           Our Private Events
         </div>
@@ -206,7 +206,7 @@
         </div>
       </div>
       <div class="emptySpace"></div>
-      <div class="">
+      <div class="infoMargin">
         <div class="whiteTitle" style="color: #721cff">
           Accelerators
         </div>
