remove .html from href

--- a/angel-form.html
+++ b/angel-form.html
@@ -17,7 +17,7 @@
 
 <main>
     <div class="navform">
-        <a href="./index.html"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
+        <a href="./"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
         <div class="navLinks">
             <!-- <a href="./angel-form.html" target="_blank" class="navLink">Apply as an angel</a> -->
             <!-- <a class="navLink">Apply as a founder</a> -->
