--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <main>
   <div id="hidingBox"></div>
   <div id="navbar">
-    <a href="./index.html"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
+    <a href="./"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
     <div class="navLinks" id="navLinksEx">
-      <a href="./angel-form.html" class="navLink">Angel sign up</a>
-      <a href="./startup-form.html" class="navLink">Founder sign up</a>
+      <a href="./angel-form" class="navLink">Angel sign up</a>
+      <a href="./startup-form" class="navLink">Founder sign up</a>
     </div>
     <!-- <div id="navExpand" onclick="expandNav()">x</div> -->
     <div id="navExpand" onclick="expandNav()">
@@ -40,7 +40,7 @@
 	</div>
   <div class="mainPage">
     <div class="secondHeader">
-      <a href="./angel-form.html" class="callButton centerButton">SIGN UP</a>
+      <a href="./angel-form" class="callButton centerButton">SIGN UP</a>
     </div>
     <div class="ecosystemBackground" id="shrinkingBox">
       <div class="ecosystem">
@@ -87,7 +87,7 @@
           </div>
           <div class="blackTitle">Startup Selection</div>
           <div class="whiteText">We select the best startups in North America through partnerships with accelerators and founder networks</div>
-          <a href="./angel-form.html" class="callButton buttonMargin">SIGN UP</a>
+          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
         </div>
       </div>
 
@@ -105,7 +105,7 @@
           </div>
           <div class="blackTitle">AI Analysis</div>
           <div class="whiteText">We screen each startup through our in-house AI model</div>
-          <a href="./angel-form.html" class="callButton buttonMargin">SIGN UP</a>
+          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
         </div>
         <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
@@ -133,7 +133,7 @@
           </div>
           <div class="blackTitle">Your Data Room</div>
           <div class="whiteText">Get unlimited access to your data room with custom features</div>
-          <a href="./angel-form.html" class="callButton buttonMargin">SIGN UP</a>
+          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
         </div>
       </div>
 
@@ -151,7 +151,7 @@
           </div>
           <div class="blackTitle">Warm Introductions</div>
           <div class="whiteText">We will provide warm introductions to any startup founder that caught your attention</div>
-          <a href="./angel-form.html" class="callButton buttonMargin">SIGN UP</a>
+          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
         </div>
         <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
@@ -300,7 +300,7 @@
 
   <div class="flexRow spaceBetween footer">
     <div>&copy; 2023 Moonarch</div>
-    <div><a class="footerLink" href="./angel-form.html">Apply to be an angel</a></div>
+    <div><a class="footerLink" href="./angel-form">Apply to be an angel</a></div>
   </div>
 </main>
 </body>
