added disclaimers, sign up button at bottom of page, and changed accelerator title

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           <div class="backgroundImg">
             <img class="infoImg" src="./assets/startupSelection.png" />
           </div>
+          <div class="disclaimer">*synthetic companies presented for illustration purposes, not actual startup profiles</div>
         </div>
         <div class="flexColumn stepsBox reveal">
           <div class="flexRow imageTitle">
@@ -111,6 +112,7 @@
           <div class="backgroundImg">
             <img class="infoImg" src="./assets/aiAnalysis.png" />
           </div>
+          <div class="disclaimer">*synthetic company presented for illustration purposes, not actual startup profile</div>
         </div>
       </div>
 
@@ -157,6 +159,7 @@
           <div class="backgroundImg">
             <img class="infoImg" src="./assets/warmIntros.png" />
           </div>
+          <div class="disclaimer">*synthetic company presented for illustration purposes, not actual startup profile</div>
         </div>
       </div>
 
@@ -208,7 +211,7 @@
       <div class="emptySpace"></div>
       <div class="infoMargin">
         <div class="whiteTitle" style="color: #721cff">
-          Accelerators
+          Our startups come from:
         </div>
         <div class="flexRow flexCenter flexWrap reveal">
           <div class="aroundPartner">
@@ -293,6 +296,7 @@
           </div> -->
         </div>
         <div class="smallTitle">...and many more to come</div>
+        <div class="accCallButton"><a href="./angel-form" class="callButton">SIGN UP</a></div>
         <div class="emptySpace"></div>
       </div>
     </div>
