fixed acc title

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <div class="emptySpace"></div>
       <div class="infoMargin">
         <div class="whiteTitle" style="color: #721cff">
-          Our startups come from:
+          Startups sourced from:
         </div>
         <div class="flexRow flexCenter flexWrap reveal">
           <div class="aroundPartner">
