--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="./css/styles.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="We provide a centralized and easily accessible platform for you to discover and research promising early-stage companies"> <!-- Google Search Description -->
+	<meta name="description" content="We provide a centralized and easily accessible platform to discover and research promising early-stage companies"> <!-- Google Search Description -->
 	<!-- Bootstrap 5 -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
