--- a/index.html
+++ b/index.html
@@ -18,37 +18,303 @@
 
 <main>
   <div id="hidingBox"></div>
+  <div id="navbar">
+    <a href="./"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
+    <div class="navLinks" id="navLinksEx">
+      <a href="./angel-form" class="navLink">Angel sign up</a>
+      <a href="./startup-form" class="navLink">Founder sign up</a>
+    </div>
+    <!-- <div id="navExpand" onclick="expandNav()">x</div> -->
+    <div id="navExpand" onclick="expandNav()">
+      <div id="bar1"></div>
+      <div id="bar2"></div>
+      <div id="bar3"></div>
+    </div>
+  </div>
 	<!-- Main header view -->
 	<div class="header">
       <a href="./"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
-      <div class="indexLinks hideIndex">
-        <a href="./angel-form" class="navLink hideIndex">Angel sign up</a>
-        <a href="./startup-form" class="navLink hideIndex">Founder sign up</a>
-      </div>
   		<p class="headerTitle">
   			Connect with the builders of tomorrow
-  		</p>
+  		</p> 
 	</div>
-  <div class="secondHeaderIndex">
-    <div class="headerSubTitle">I am...</div>
-    <div class="flexRow">
-      <a href="./angel" class="callButton halfScreen">AN ANGEL</a>
-      <a href="./startup" class="callButton halfScreen">A FOUNDER</a>
+  <div class="mainPage">
+    <div class="secondHeader">
+      <a href="./angel-form" class="callButton centerButton">SIGN UP</a>
+    </div>
+    <div class="ecosystemBackground" id="shrinkingBox">
+      <div class="ecosystem">
+        <div class="whiteTitle">
+          Our Network
+        </div>
+        <div class="flexRow spaceBetween column800">
+          <div class="flexColumn numCol">
+            <div class="num">20</div>
+            <div class="numText">accelerators</div>
+          </div>
+          <div class="flexColumn numCol">
+            <div class="num">30<span class="num" style="font-size: 80px">+</span></div>
+            <div class="numText">angels</div>
+          </div>
+          <div class="flexColumn numCol">
+            <div class="num">400<span class="num" style="font-size: 80px">+</span></div>
+            <div class="numText">companies</div>
+          </div>
+          <!-- <div class="flexColumn numCol">
+            <div class="num">5<span class="num" style="font-size: 80px"></span></div>
+            <div class="numText">speakers</div>
+          </div> -->
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapGrid flexCenter">
+      <div class="emptySpace"></div>
+      <div class="whiteTitle" style="color: #721cff">
+        Our Startup Funnel
+      </div>
+      <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
+        <div class="flexColumn flexCenter reveal">
+          <div class="backgroundImg">
+            <img class="infoImg" src="./assets/startupSelection.png" />
+          </div>
+          <div class="disclaimer">*synthetic companies presented for illustration purposes, not actual startup profiles</div>
+        </div>
+        <div class="flexColumn stepsBox reveal">
+          <div class="flexRow imageTitle">
+            <div class="blueTitle">
+              STEP ONE
+            </div>
+          </div>
+          <div class="blackTitle">Startup Selection</div>
+          <div class="whiteText">We select the best startups in North America through partnerships with accelerators and founder networks</div>
+          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
+        </div>
+      </div>
+
+      <div class="emptySpace">
+        <img height="100" width="100" class="arrow" src="./assets/arrow1.png" style="transform: translateX(-70px);"  />
+      </div>
+
+      <div class="flexRow spaceBetween textCol reverseRow">  <!--  class="blackBox animationCard" -->
+        <div class="flexColumn stepsBox reveal">
+          <div class="flexRow imageTitle">
+            <!-- <img height="20" width="20" src="./assets/world.png" /> -->
+            <div class="blueTitle">
+              STEP TWO
+            </div>
+          </div>
+          <div class="blackTitle">AI Analysis</div>
+          <div class="whiteText">We screen each startup through our in-house AI model</div>
+          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
+        </div>
+        <div class="flexColumn flexCenter reveal">
+          <div class="backgroundImg">
+            <img class="infoImg" src="./assets/aiAnalysis.png" />
+          </div>
+          <div class="disclaimer">*synthetic company presented for illustration purposes, not actual startup profile</div>
+        </div>
+      </div>
+
+      <div class="emptySpace">
+        <img height="100" width="150" class="arrow" src="./assets/arrow2.png" style="transform: translateX(-30px) rotate(5deg);"  />
+      </div>
+
+      <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
+        <div class="flexColumn flexCenter reveal">
+          <div class="backgroundImg">
+            <img class="infoImg" src="./assets/dataRoom.png" />
+          </div>
+        </div>
+        <div class="flexColumn stepsBox reveal">
+          <div class="flexRow imageTitle">
+            <!-- <img height="20" width="20" src="./assets/world.png" /> -->
+            <div class="blueTitle">
+              STEP THREE
+            </div>
+          </div>
+          <div class="blackTitle">Your Data Room</div>
+          <div class="whiteText">Get unlimited access to your data room with custom features</div>
+          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
+        </div>
+      </div>
+
+      <div class="emptySpace">
+        <img height="50" width="100" class="arrow" src="./assets/arrow3.png" style="transform: translateX(70px);"  />
+      </div>
+
+      <div class="flexRow spaceBetween textCol reverseRow">  <!--  class="blackBox animationCard" -->
+        <div class="flexColumn stepsBox reveal">
+          <div class="flexRow imageTitle">
+            <!-- <img height="20" width="20" 2src="./assets/world.png" /> -->
+            <div class="blueTitle">
+              STEP FOUR
+            </div>
+          </div>
+          <div class="blackTitle">Warm Introductions</div>
+          <div class="whiteText">We will provide warm introductions to any startup founder that caught your attention</div>
+          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
+        </div>
+        <div class="flexColumn flexCenter reveal">
+          <div class="backgroundImg">
+            <img class="infoImg" src="./assets/warmIntros.png" />
+          </div>
+          <div class="disclaimer">*synthetic company presented for illustration purposes, not actual startup profile</div>
+        </div>
+      </div>
+
+      <div class="emptySpace"></div>
+      <div class="infoMargin"> 
+        <div class="whiteTitle" style="color: #721cff">
+          Our Private Events
+        </div>
+        <div class="whiteText">Meet exited-unicorn founders, MPs at prominent funds who will speak on how to foster an investment thesis, diligence strategies & much more!</div>
+        <div class="flexRow flexCenter flexWrap">
+          <div class="flexColumn flexCenter speakerBox reveal">
+            <div class="speakerImg"><img class="croppedImg" src="./assets/alex.jpeg" /></div>
+            <div class="blackTitle speakerTitle">Alex Normon</div>
+            <div class="greyText">N49P Partner, AngelList Canada</div>
+            <a href="https://www.linkedin.com/in/alexanderlnorman/" target="_blank" class="callButton shortButton">About</a>
+          </div>
+          <div class="flexColumn flexCenter speakerBox reveal">
+            <div class="speakerImg"><img class="croppedImg" src="./assets/jeff.jpeg" /></div>
+            <div class="blackTitle speakerTitle">Jeff Hoffman</div>
+            <div class="greyText">Investor, Philanthropist</div>
+            <a href="https://www.linkedin.com/in/jeffhoff/" target="_blank" class="callButton shortButton">About</a>
+          </div>
+          <div class="flexColumn flexCenter speakerBox reveal">
+            <div class="speakerImg"><img class="croppedImg" src="./assets/andre.jpeg" /></div>
+            <div class="blackTitle speakerTitle">Andre Charoo</div>
+            <div class="greyText">Maple GP & Inovia Venture Partner</div>
+            <a href="https://www.linkedin.com/in/acharoo/" target="_blank" class="callButton shortButton">About</a>
+          </div>
+          <div class="flexColumn flexCenter speakerBox reveal">
+            <div class="speakerImg"><img class="croppedImg" src="./assets/geri.jpeg" /></div>
+            <div class="blackTitle speakerTitle">Geri Kirilova</div>
+            <div class="greyText">Laconia MP</div>
+            <a href="https://www.linkedin.com/in/gerikirilova/" target="_blank" class="callButton shortButton">About</a>
+          </div>
+          <div class="flexColumn flexCenter speakerBox reveal">
+            <div class="speakerImg"><img class="croppedImg" src="./assets/frederik.jpeg" /></div>
+            <div class="blackTitle speakerTitle">Frederik Groce</div>
+            <div class="greyText">Wellington VC & BLCK VC Co-founder</div>
+            <a href="https://www.linkedin.com/in/frederikgroce/" target="_blank" class="callButton shortButton">About</a>
+          </div>
+          <div class="flexColumn flexCenter speakerBox reveal">
+            <div class="speakerImg"><img class="croppedImg" src="./assets/derrick.jpeg" /></div>
+            <div class="blackTitle speakerTitle">Derrick Raphael</div>
+            <div class="greyText">CEO, Founder</div>
+            <a href="https://www.linkedin.com/in/derrickraphael/" target="_blank" class="callButton shortButton">About</a>
+          </div>
+        </div>
+      </div>
+      <div class="emptySpace"></div>
+      <div class="infoMargin">
+        <div class="whiteTitle" style="color: #721cff">
+          Startups sourced from:
+        </div>
+        <div class="flexRow flexCenter flexWrap reveal">
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://fintechcadence.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/fintechCadence.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.nextcanada.com/next-36/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/next36.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.nextcanada.com/next-ai/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextai.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.nextcanada.com/next-founders/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextfounders.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.antler.co" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/antler.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://creativedestructionlab.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cdl.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://ams.uottawa.ca/accelerator-laboratory-homepage/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/lalonde.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.jumboventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/jumbo.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.bearcatventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/bearcat.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.sky-ventures.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/skyventures.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.northeastern.edu/idea/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/qidea.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://happyvalley.vc/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/pennstate.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.linkedin.com/company/venture-capital-club-oklahoma/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/vcc.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.gatorventurecapital.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/gator.png" /></a>
+            </div>
+          </div>
+          <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://www.collegeventuresnetwork.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cnv.png" /></a>
+            </div>
+          </div>
+          <!-- <div class="aroundPartner">
+            <div class="flexColumn partnerLogo">
+              <a href="https://holtxchange.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/xchange.png" /></a>
+            </div>
+          </div> -->
+        </div>
+        <div class="smallTitle">...and many more to come</div>
+        <div class="accCallButton"><a href="./angel-form" class="callButton">SIGN UP</a></div>
+        <div class="emptySpace"></div>
+      </div>
     </div>
   </div>
-  <div class="flexColumn indexFooter">
+
+  <div class="flexColumn footer">
     <div class="flexRow spaceBetween footerBox">
-      <div class="flexColumn footerCol">
+      <div class="flexColumn">
         <div class="footerTitle">FOR FOUNDERS</div>
         <div><a class="footerLink" href="./startup">Learn More</a></div>
         <div><a class="footerLink" href="./startup-form">Apply to Raise</a></div>
       </div>
-      <div class="flexColumn footerCol">
+      <div class="flexColumn">
         <div class="footerTitle">FOR ANGELS</div>
         <div><a class="footerLink" href="./angel">Learn More</a></div>
         <div><a class="footerLink" href="./angel-form">Apply to Join</a></div>
       </div>
-      <div class="flexColumn footerCol">
+      <div class="flexColumn">
         <div class="footerTitle">FOLLOW US</div>
         <div><a class="footerLink" href="./startup">Linkedin</a></div>
         <div><a class="footerLink" href="./startup-form">Twitter</a></div>
