--- a/angel-form.html
+++ b/angel-form.html
@@ -25,9 +25,27 @@
     </div>
 
     <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrfqlOcjWEELc8uG?backgroundColor=purple" frameborder="0" onmousewheel="" width="100%" height="962" style="background: transparent; border: 1px solid #ccc;"></iframe>
-    <div class="flexRow spaceBetween footer">
-        <div>&copy; 2023 Moonarch</div>
-        <!-- <div><a class="footerLink" href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank">Apply to be an angel</a></div> -->
-    </div>
+    <div class="flexColumn footer">
+        <div class="flexRow spaceBetween footerBox">
+          <div class="flexColumn">
+            <div class="footerTitle">FOR FOUNDERS</div>
+            <div><a class="footerLink" href="./startup">Learn More</a></div>
+            <div><a class="footerLink" href="./startup-form">Apply to Raise</a></div>
+          </div>
+          <div class="flexColumn">
+            <div class="footerTitle">FOR ANGELS</div>
+            <div><a class="footerLink" href="./angel">Learn More</a></div>
+            <div><a class="footerLink" href="./angel-form">Apply to Join</a></div>
+          </div>
+          <div class="flexColumn">
+            <div class="footerTitle">FOLLOW US</div>
+            <div><a class="footerLink" href="https://www.linkedin.com/company/moonarch" target="_blank">Linkedin</a></div>
+            <div><a class="footerLink" href="https://twitter.com/Moonarch_io" target="_blank">Twitter</a></div>
+          </div>
+        </div>
+        <div class="flexRow spaceBetween footerBox" style="border-top: thin solid darkgray; margin-top: 30px;">
+          <div>&copy; 2023 Moonarch</div>
+        </div>
+      </div>
 </main>
 </body>
