--- a/startup-form.html
+++ b/startup-form.html
@@ -24,10 +24,33 @@
         </div>
     </div>
 
-    <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrPEMyFzdnIpOKnX?backgroundColor=purple" frameborder="0" onmousewheel="" width="100%" height="2336" style="background: transparent; border: 1px solid #ccc;"></iframe>
-    <div class="flexRow spaceBetween footer">
-        <div>&copy; 2023 Moonarch</div>
-        <!-- <div><a class="footerLink" href="https://airtable.com/shrfqlOcjWEELc8uG" target="_blank">Apply to be an angel</a></div> -->
+    <div id="startupForm">
+        <div id="ss_survey_widget"></div>
+        <script id="SS_SCRIPT">function sparrowLaunch(opts){var e="ss-widget",t="script",a=document,r=window,l=localStorage;var s,n,c,rm=a.getElementById('SS_SCRIPT');r.SS_WIDGET_TOKEN="tt-3itY1nnjXCaWrHAN1e7BjE";r.SS_ACCOUNT="aquilainvesting.surveysparrow.com";r.SS_SURVEY_NAME="moonarch-startup-application";if(!a.getElementById(e) && !l.getItem('removed-ss-widget-tt-3itY1nnjXCaWrHAN1e7BjE')){var S=function(){S.update(arguments)};S.args=[];S.update=function(e){S.args.push(e)};r.SparrowLauncher=S;s=a.getElementsByTagName(t);c=s[s.length-1];n=a.createElement(t);n.type="text/javascript";n.async=!0;n.id=e;n.src=["https://","aquilainvesting.surveysparrow.com/widget/",r.SS_WIDGET_TOKEN,"?","customParams=",JSON.stringify(opts)].join("");c.parentNode.insertBefore(n,c);r.SS_VARIABLES=opts;rm.parentNode.removeChild(rm);}};</script>
+        <script>sparrowLaunch({/*add custom params here*/})</script>
+    </div>
+
+    <div class="flexColumn footer">
+        <div class="flexRow spaceBetween footerBox">
+          <div class="flexColumn">
+            <div class="footerTitle">FOR FOUNDERS</div>
+            <div><a class="footerLink" href="./startup">Learn More</a></div>
+            <div><a class="footerLink" href="./startup-form">Apply to Raise</a></div>
+          </div>
+          <div class="flexColumn">
+            <div class="footerTitle">FOR ANGELS</div>
+            <div><a class="footerLink" href="./angel">Learn More</a></div>
+            <div><a class="footerLink" href="./angel-form">Apply to Join</a></div>
+          </div>
+          <div class="flexColumn">
+            <div class="footerTitle">FOLLOW US</div>
+            <div><a class="footerLink" href="https://www.linkedin.com/company/moonarch" target="_blank">Linkedin</a></div>
+            <div><a class="footerLink" href="https://twitter.com/Moonarch_io" target="_blank">Twitter</a></div>
+          </div>
+        </div>
+        <div class="flexRow spaceBetween footerBox" style="border-top: thin solid darkgray; margin-top: 30px;">
+          <div>&copy; 2023 Moonarch</div>
+        </div>
     </div>
 </main>
 </body>
