--- a/startup.html
+++ b/startup.html
@@ -35,7 +35,7 @@
 	<div class="header">
       <a href="./"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
   		<p class="headerTitle">
-  			Connect with the builders of tomorrow
+  			Launch your startup to the moon
   		</p> 
 	</div>
   <div class="mainPage">
@@ -71,7 +71,7 @@
     <div class="wrapGrid flexCenter">
       <div class="emptySpace"></div>
       <div class="whiteTitle" style="color: #721cff">
-        Launch Your Startup to the Moon
+        Apply now in 3 easy steps
       </div>
       <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
         <div class="flexColumn flexCenter reveal">
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div class="blackTitle">Join our Community</div>
-          <div class="whiteText">Apply today to join a growing community of the best startups and angels in North America</div>
+          <div class="whiteText">Apply now and let us know who you are</div>
           <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
         </div>
       </div>
@@ -104,10 +104,9 @@
               STEP TWO
             </div>
           </div>
-          <div class="blackTitle">Get Immediate Insights*</div>
-          <div class="whiteText">Apply and get immediate insights on your company's strengths and weaknesses</div>
+          <div class="blackTitle">Pitch your startup</div>
+          <div class="whiteText">Get invited to our demo-days and partnered events to pitch your startup</div>
           <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
-          <div class="disclaimer">*coming soon</div>
         </div>
         <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
@@ -141,34 +140,10 @@
         </div>
       </div>
 
-      <div class="emptySpace">
-        <img height="50" width="100" class="arrow" src="./assets/arrow3.png" style="transform: translateX(70px);"  />
-      </div>
-
-      <div class="flexRow spaceBetween textCol reverseRow">  <!--  class="blackBox animationCard" -->
-        <div class="flexColumn stepsBox reveal">
-          <div class="flexRow imageTitle">
-            <!-- <img height="20" width="20" 2src="./assets/world.png" /> -->
-            <div class="blueTitle">
-              STEP FOUR
-            </div>
-          </div>
-          <div class="blackTitle">Join Demo Days</div>
-          <div class="whiteText">Get the opportunity to pitch your startup at Moonarch and Moonarch-affiliated events</div>
-          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
-        </div>
-        <div class="flexColumn flexCenter reveal">
-          <div class="backgroundImg">
-            <img class="infoImg" src="./assets/presenting.png" />
-          </div>
-          <div class="disclaimer">*synthetic company presented for illustration purposes, not actual startup profile</div>
-        </div>
-      </div>
-
       <div class="emptySpace"></div>
       <div class="infoMargin">
         <div class="whiteTitle" style="color: #721cff">
-          Our startups come from:
+          Our partners:
         </div>
         <div class="flexRow flexCenter flexWrap reveal">
           <div class="aroundPartner">
