--- a/startup.html
+++ b/startup.html
@@ -35,7 +35,7 @@
 	<div class="header">
       <a href="./"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
   		<p class="headerTitle">
-  			Launch your startup to the moon
+  			Pitch your startup and get funding
   		</p> 
 	</div>
   <div class="mainPage">
@@ -71,7 +71,7 @@
     <div class="wrapGrid flexCenter">
       <div class="emptySpace"></div>
       <div class="whiteTitle" style="color: #721cff">
-        Apply now in 3 easy steps
+        Get funding in 3 easy steps
       </div>
       <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
         <div class="flexColumn flexCenter reveal">
