--- a/startup.html
+++ b/startup.html
@@ -35,7 +35,7 @@
 	<div class="header">
       <a href="./"><img class="logoTitle" src="./assets/logoText-white.png" /></a>
   		<p class="headerTitle">
-  			Pitch your startup and get funding
+  			Commission-free fund raising for startups
   		</p> 
 	</div>
   <div class="mainPage">
@@ -53,7 +53,7 @@
             <div class="numText">accelerators</div>
           </div>
           <div class="flexColumn numCol">
-            <div class="num">30<span class="num" style="font-size: 80px">+</span></div>
+            <div class="num">35<span class="num" style="font-size: 80px">+</span></div>
             <div class="numText">angels</div>
           </div>
           <div class="flexColumn numCol">
@@ -76,9 +76,9 @@
       <div class="flexRow spaceBetween textCol">  <!--  class="blackBox animationCard" -->
         <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
-            <img class="infoImg" src="./assets/startups.png" />
+            <img class="infoImg" src="./assets/application.png" />
           </div>
-          <div class="disclaimer">*synthetic companies presented for illustration purposes, not actual startup profiles</div>
+          <div class="disclaimer">*synthetic company information presented for illustration purposes, not actual startup profile</div>
         </div>
         <div class="flexColumn stepsBox reveal">
           <div class="flexRow imageTitle">
@@ -87,8 +87,8 @@
             </div>
           </div>
           <div class="blackTitle">Join our Community</div>
-          <div class="whiteText">Apply now and let us know who you are</div>
-          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
+          <div class="whiteText">Apply now to let us know who you are and get exposure to our Angel network</div>
+          <a href="./startup-form" class="callButton buttonMargin">SIGN UP</a>
         </div>
       </div>
 
@@ -106,11 +106,11 @@
           </div>
           <div class="blackTitle">Pitch your startup</div>
           <div class="whiteText">Get invited to our demo-days and partnered events to pitch your startup</div>
-          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
+          <a href="./startup-form" class="callButton buttonMargin">SIGN UP</a>
         </div>
         <div class="flexColumn flexCenter reveal">
           <div class="backgroundImg">
-            <img class="infoImg" src="./assets/aiAnalysis2.png" />
+            <img class="infoImg" src="./assets/presenting.png" />
           </div>
           <div class="disclaimer">*synthetic company presented for illustration purposes, not actual startup profile</div>
         </div>
@@ -136,99 +136,38 @@
           </div>
           <div class="blackTitle">Warm Introductions</div>
           <div class="whiteText">We will provide warm introductions to angel investors interested in your startup</div>
-          <a href="./angel-form" class="callButton buttonMargin">SIGN UP</a>
+          <a href="./startup-form" class="callButton buttonMargin">SIGN UP</a>
         </div>
       </div>
 
       <div class="emptySpace"></div>
       <div class="infoMargin">
         <div class="whiteTitle" style="color: #721cff">
-          Our partners:
+          Our angels come from:
         </div>
         <div class="flexRow flexCenter flexWrap reveal">
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://fintechcadence.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/fintechCadence.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/google.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.nextcanada.com/next-36/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/next36.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/microsoft.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.nextcanada.com/next-ai/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextai.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/coinbase.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.nextcanada.com/next-founders/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/nextfounders.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/deloitte.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.antler.co" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/antler.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/bcg.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://creativedestructionlab.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cdl.png" /></a>
-            </div>
+          <div class="flexColumn aroundPartner">
+            <div class="compLogo"><img class="accImg" src="assets/angelCompanies/scale.png" /></div>
           </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://ams.uottawa.ca/accelerator-laboratory-homepage/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/lalonde.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.jumboventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/jumbo.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.bearcatventures.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/bearcat.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.sky-ventures.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/skyventures.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.northeastern.edu/idea/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/qidea.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://happyvalley.vc/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/pennstate.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.linkedin.com/company/venture-capital-club-oklahoma/" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/vcc.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.gatorventurecapital.org" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/gator.png" /></a>
-            </div>
-          </div>
-          <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://www.collegeventuresnetwork.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/cnv.png" /></a>
-            </div>
-          </div>
-          <!-- <div class="aroundPartner">
-            <div class="flexColumn partnerLogo">
-              <a href="https://holtxchange.com" target="_blank" class="imageLink"><img class="accImg" src="assets/acceleratorLogo/xchange.png" /></a>
-            </div>
-          </div> -->
         </div>
-        <div class="smallTitle">...and many more to come</div>
-        <div class="accCallButton"><a href="./angel-form" class="callButton">SIGN UP</a></div>
+        <!-- <div class="smallTitle">...and many more to come</div> -->
+        <div style="height: 50px"></div>
+        <div class="accCallButton"><a href="./startup-form" class="callButton">SIGN UP</a></div>
         <div class="emptySpace"></div>
       </div>
     </div>
